# aus-deal-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
app/: __init__.py  catalog.py  config.py  database.py  main.py  models.py
app/services/: notifier.py  opensky.py  radar.py  scoring.py
app/services/providers/: amadeus.py  base.py  bonuses.py  demo.py  seats.py
app/web/static/: app.js  styles.css
app/web/static/flight-tracker/: flight-tracker.css
app/web/templates/: index.html
docs/: config.js  index.html
docs/assets/: app.js  styles.css
docs/assets/flight-tracker/: flight-tracker.css
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: LiveFlightTracker.jsx  main.jsx  tracker.css
scripts/: build_github_pages.py
tests/: test_live_aircraft.py  test_scoring.py  test_tracker.py
