[project]
name = "aus-deal-radar"
version = "0.1.0"
description = "Austin flight and points deal radar with Discord alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4,<4",
    "fastapi>=0.115.0,<1",
    "httpx>=0.28.0,<1",
    "jinja2>=3.1.4,<4",
    "pydantic-settings>=2.6.1,<3",
    "python-multipart>=0.0.12,<1",
    "uvicorn>=0.32.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
